--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "include/imgui"]
 	path = include/imgui
 	url = https://github.com/Rythe-Interactive/imgui.git
+[submodule "include/glfw"]
+	path = include/glfw
+	url = https://github.com/glfw/glfw.git
+[submodule "include/glew"]
+	path = include/glew
+	url = https://github.com/nigels-com/glew.git
