--- a/.gitmodules
+++ b/.gitmodules
@@ -13,8 +13,8 @@
 [submodule "arbrook/input"]
 	path = arbrook/input
 	url = https://github.com/Ragingram2/Arbrook-Input.git
-[submodule "arbrook/rendering"]
-	path = arbrook/rendering
+[submodule "arbrook/graphics"]
+	path = arbrook/graphics
 	url = https://github.com/Ragingram2/Arbrook-Rendering.git
 [submodule "arbrook/physics"]
 	path = arbrook/physics
